--- a/updates/1.0.0-beta.28.md
+++ b/updates/1.0.0-beta.28.md
@@ -1,6 +1,7 @@
 ---
 layout: page
 title: Update 1.0.0 Beta.28
+permalink: /updates/1.0.0-beta.28/
 ---
 
 * Replaced the default browser tooltips, with bootstrap tooltips.
