--- a/updates/1.0.0-beta.29.md
+++ b/updates/1.0.0-beta.29.md
@@ -1,6 +1,7 @@
 ---
 layout: page
 title: Update 1.0.0 Beta.29
+permalink: /updates/1.0.0-beta.29/
 ---
 
 * Macro recorder has be redone to use directly the keydown/up events as they are fired from the browser (electron). That way we do not require the presence of 5Q/X50 to do macro recording.
