--- a/updates/1.0.0-beta.31.md
+++ b/updates/1.0.0-beta.31.md
@@ -1,6 +1,7 @@
 ---
 layout: page
 title: Update 1.0.0 Beta.31
+permalink: /updates/1.0.0-beta.31/
 ---
 
 * Give access to simulation modes for X50 and 5Q.
