--- a/updates/1.0.0-beta.35.md
+++ b/updates/1.0.0-beta.35.md
@@ -1,6 +1,7 @@
 ---
 layout: page
 title: Update 1.0.0 Beta.35
+permalink: /updates/1.0.0-beta.35/
 ---
 
 * Added a screen for the latest change log.
