--- a/updates/2.0.0-beta.4.md
+++ b/updates/2.0.0-beta.4.md
@@ -4,13 +4,13 @@ title: Update 2.0.0 Beta.4
 permalink: /updates/2.0.0-beta.4/
 --- -->
 
-New:
+#### New
 
 * Signal Center is now in the cloud and opens in an Electron Browser Window
 * Updated welcome video
 * Clicking on a profile name will focus on profile name input
 
-Fixes:
+#### Fixes
 
 * Fixed the repeated text for linux installers window
 * Fixed the link to the changelog page
